[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/UI/Menus/Panels/OptionPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Fonts/Revamped.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Fonts/Seven Oh Ess 8x8 Monospaced.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://game/UI/Menus/Panels/VolumePanel.gd" type="Script" id=4]
[ext_resource path="res://assets/Sounds/SFX/Buttons/Interface_UI_04.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 1
font_data = ExtResource( 3 )

[node name="VolumePanel" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="ColorRect" parent="." index="0"]
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -78.2316
margin_right = 155.0
margin_bottom = 51.7684
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVolume" type="HBoxContainer" parent="VBoxContainer" index="0"]
margin_right = 311.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneralMinus" type="Button" parent="VBoxContainer/MainVolume" index="0"]
margin_right = 22.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MainVolume" index="1"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 26.0
margin_right = 30.0
margin_bottom = 30.0

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/MainVolume" index="2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 34.0
margin_right = 38.0
margin_bottom = 30.0

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/MainVolume" index="3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 42.0
margin_right = 46.0
margin_bottom = 30.0

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/MainVolume" index="4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 50.0
margin_right = 54.0
margin_bottom = 30.0

[node name="Title" type="Label" parent="VBoxContainer/MainVolume" index="5"]
margin_left = 58.0
margin_right = 204.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "General"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator11" type="VSeparator" parent="VBoxContainer/MainVolume" index="6"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 208.0
margin_right = 212.0
margin_bottom = 30.0

[node name="VSeparator10" type="VSeparator" parent="VBoxContainer/MainVolume" index="7"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 216.0
margin_right = 220.0
margin_bottom = 30.0

[node name="VSeparator9" type="VSeparator" parent="VBoxContainer/MainVolume" index="8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 224.0
margin_right = 228.0
margin_bottom = 30.0

[node name="GeneralValue" type="Label" parent="VBoxContainer/MainVolume" index="9"]
margin_left = 232.0
margin_right = 252.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator8" type="VSeparator" parent="VBoxContainer/MainVolume" index="10"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 256.0
margin_right = 260.0
margin_bottom = 30.0

[node name="VSeparator7" type="VSeparator" parent="VBoxContainer/MainVolume" index="11"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 264.0
margin_right = 268.0
margin_bottom = 30.0

[node name="VSeparator6" type="VSeparator" parent="VBoxContainer/MainVolume" index="12"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 272.0
margin_right = 276.0
margin_bottom = 30.0

[node name="VSeparator5" type="VSeparator" parent="VBoxContainer/MainVolume" index="13"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 280.0
margin_right = 284.0
margin_bottom = 30.0

[node name="GeneralPlus" type="Button" parent="VBoxContainer/MainVolume" index="14"]
margin_left = 288.0
margin_right = 310.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" index="1"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 34.0
margin_right = 311.0
margin_bottom = 38.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer" index="2"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 42.0
margin_right = 311.0
margin_bottom = 46.0

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer" index="3"]
margin_top = 50.0
margin_right = 311.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicMinus" type="Button" parent="VBoxContainer/MusicVolume" index="0"]
margin_right = 22.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MusicVolume" index="1"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 26.0
margin_right = 30.0
margin_bottom = 30.0

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/MusicVolume" index="2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 34.0
margin_right = 38.0
margin_bottom = 30.0

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/MusicVolume" index="3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 42.0
margin_right = 46.0
margin_bottom = 30.0

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/MusicVolume" index="4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 50.0
margin_right = 54.0
margin_bottom = 30.0

[node name="Title" type="Label" parent="VBoxContainer/MusicVolume" index="5"]
margin_left = 58.0
margin_right = 205.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Musica "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator11" type="VSeparator" parent="VBoxContainer/MusicVolume" index="6"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 209.0
margin_right = 213.0
margin_bottom = 30.0

[node name="VSeparator10" type="VSeparator" parent="VBoxContainer/MusicVolume" index="7"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 217.0
margin_right = 221.0
margin_bottom = 30.0

[node name="VSeparator9" type="VSeparator" parent="VBoxContainer/MusicVolume" index="8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 225.0
margin_right = 229.0
margin_bottom = 30.0

[node name="MusicValue" type="Label" parent="VBoxContainer/MusicVolume" index="9"]
margin_left = 233.0
margin_right = 253.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator8" type="VSeparator" parent="VBoxContainer/MusicVolume" index="10"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 257.0
margin_right = 261.0
margin_bottom = 30.0

[node name="VSeparator7" type="VSeparator" parent="VBoxContainer/MusicVolume" index="11"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 265.0
margin_right = 269.0
margin_bottom = 30.0

[node name="VSeparator6" type="VSeparator" parent="VBoxContainer/MusicVolume" index="12"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 273.0
margin_right = 277.0
margin_bottom = 30.0

[node name="VSeparator5" type="VSeparator" parent="VBoxContainer/MusicVolume" index="13"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 281.0
margin_right = 285.0
margin_bottom = 30.0

[node name="MusicPlus" type="Button" parent="VBoxContainer/MusicVolume" index="14"]
margin_left = 289.0
margin_right = 311.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer" index="4"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 84.0
margin_right = 311.0
margin_bottom = 88.0

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer" index="5"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 92.0
margin_right = 311.0
margin_bottom = 96.0

[node name="EffectsVolume" type="HBoxContainer" parent="VBoxContainer" index="6"]
margin_top = 100.0
margin_right = 311.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsMinus" type="Button" parent="VBoxContainer/EffectsVolume" index="0"]
margin_right = 22.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="1"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 26.0
margin_right = 30.0
margin_bottom = 30.0

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 34.0
margin_right = 38.0
margin_bottom = 30.0

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 42.0
margin_right = 46.0
margin_bottom = 30.0

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 50.0
margin_right = 54.0
margin_bottom = 30.0

[node name="Title" type="Label" parent="VBoxContainer/EffectsVolume" index="5"]
margin_left = 58.0
margin_right = 205.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Efectos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator11" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="6"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 209.0
margin_right = 213.0
margin_bottom = 30.0

[node name="VSeparator10" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="7"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 217.0
margin_right = 221.0
margin_bottom = 30.0

[node name="VSeparator9" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 225.0
margin_right = 229.0
margin_bottom = 30.0

[node name="EffectsValue" type="Label" parent="VBoxContainer/EffectsVolume" index="9"]
margin_left = 233.0
margin_right = 253.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator8" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="10"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 257.0
margin_right = 261.0
margin_bottom = 30.0

[node name="VSeparator7" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="11"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 265.0
margin_right = 269.0
margin_bottom = 30.0

[node name="VSeparator6" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="12"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 273.0
margin_right = 277.0
margin_bottom = 30.0

[node name="VSeparator5" type="VSeparator" parent="VBoxContainer/EffectsVolume" index="13"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 281.0
margin_right = 285.0
margin_bottom = 30.0

[node name="EffectsPlus" type="Button" parent="VBoxContainer/EffectsVolume" index="14"]
margin_left = 289.0
margin_right = 311.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 5 )
[connection signal="pressed" from="VBoxContainer/MainVolume/GeneralMinus" to="." method="_on_GeneralMinus_pressed"]
[connection signal="pressed" from="VBoxContainer/MainVolume/GeneralPlus" to="." method="_on_GeneralPlus_pressed"]
[connection signal="pressed" from="VBoxContainer/MusicVolume/MusicMinus" to="." method="_on_MusicMinus_pressed"]
[connection signal="pressed" from="VBoxContainer/MusicVolume/MusicPlus" to="." method="_on_MusicPlus_pressed"]
[connection signal="pressed" from="VBoxContainer/EffectsVolume/EffectsMinus" to="." method="_on_EffectsMinus_pressed"]
[connection signal="pressed" from="VBoxContainer/EffectsVolume/EffectsPlus" to="." method="_on_EffectsPlus_pressed"]
